tests/parser/errors/unterminated_block_comment.mochi
/* never closed
let x = 1
